fix: ios gap compability

--- a/shelter/pages/pets/pets.concat.css
+++ b/shelter/pages/pets/pets.concat.css
@@ -447,6 +447,14 @@ body {
   background-color: #fafafa;
   transition: all .3s;
   cursor: pointer; }
+  .card:not(:last-child) {
+    margin-right: 0;
+    -apple-margin-right: 4rem; }
+  @media only screen and (max-width: 47.9375em) {
+    .card {
+      -apple-margin-right: 0;
+      -apple-margin-bottom: 3rem;
+      margin-bottom: 0; } }
   .card__img {
     display: block;
     height: 27rem;
